# bot-chatgpt-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  lint.sh  pyproject.toml
.github/workflows/: deploy.yml  lint.yml  pyright.yml  pytest.yml  ruff.yml  tests.yml
app/: bot.py  config_reader.py  containers.py
app/clients/: openai.py
app/exceptions/: base.py  openai.py
app/filters/: type_message.py  users.py
app/handlers/: __init__.py  actions.py  others.py
app/handlers/chat/: __init__.py  actions.py  asking.py  logic.py
app/handlers/commands/: __init__.py  commands.py
app/handlers/images/: __init__.py  base.py  generation.py  logic.py
app/handlers/others/: __init__.py  service.py  state_check.py
app/handlers/service/: __init__.py  service.py
app/inlines/: actions.py
app/keyboards/: actions.py  admin.py
app/middlewares/: __init__.py  containers.py  exceptions.py  logs.py  openai.py  openai_client.py  state_cleaner.py  throttling.py  typing.py
app/middlewares/logs_middleware/: filters.py  main_middleware.py
app/middlewares/logs_middleware/loggers/: base.py  containers.py  dev.py  factory.py  prod.py
app/models/: models.py
app/states/: state.py  waiting.py
app/storage/: containers.py  factory.py  storage.py
app/utils/: constants.py  enums.py  images.py  logs.py  retry.py  scheduler.py  set_commands.py  text_formatter.py  types.py  voice_messages.py
scripts/: lint.sh  pyright.sh  tests.sh
tests/: conftest.py  test_commands.py
tests/integration_tests/: conftest.py  logic.py  mocked_bot.py  test_chat_handlers.py  test_command_handlers.py  test_commands.py
tests/integration_tests/test_chat_handlers/: conftest.py  logic.py  test_chat_handlers.py
tests/integration_tests/test_command_handlers/: conftest.py  test_command_handlers.py
tests/test_handlers/: test_chat_handlers.py  test_commands_handlers.py  test_image_handlers.py  test_service_handlers.py
tests/unit_tests/: conftest.py  logic.py  test_chat_handlers.py  test_commands_handlers.py  test_image_handlers.py  test_others_handlers.py  test_service_handlers.py
