[tool.poetry]
name = "bot-chatgpt-api"
version = "0.1.0"
description = "Bot for interaction with ChatGPT API"
authors = ["a.merkulov <merk.aimerk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.17.0"
pydantic-settings = "^2.7.1"
openai = "^1.63.0"
cachetools = "^5.5.1"
redis = "^5.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.3"
pyright = "^1.1.393"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
pytest-env = "^1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 90
indent-width = 4
target-version = "py312"
src = ["app"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "T"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
typeCheckingMode = "basic"
exclude = ["**/tests"]

reportUnknownArgumentType = "none"
reportMissingImports = "error"
reportMissingTypeStubs = "error"
reportOptionalMemberAccess = "none"
reportOptionalSubscript = "none"
reportAttributeAccessIssue = "none"
reportArgumentType = "none"
reportIncompatibleMethodOverride = "warning"

pythonVersion = "3.12"
pythonPlatform = "Linux"

[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = ["app"]
testpaths = ["tests"]
console_output_style = "progress"
asyncio_mode = "auto"
addopts = "-ra"
asyncio_default_fixture_loop_scope = "function"
log_cli = false
env = [
    "BOT_TOKEN=token",
    "API_KEY=api_key",
    "BOT_ENV=dev",
    "ADMIN_ID=666",
    "REDIS_HOST=localhost",
    "REDIS_PORT=6379",
    "REDIS_DB=0",
    "REDIS_PASSWORD=pass"
]
