[project]
name = "bot-chatgpt-api"
version = "0.1.0"
description = "Bot for interaction with ChatGPT API"
authors = [{ name = "a.merkulov", email = "merk.aimerk@gmail.com" }]
requires-python = "~=3.12"
dependencies = [
    "aiogram>=3.17.0,<4",
    "pydantic-settings>=2.10.1",
    "openai>=1.93.0",
    "cachetools>=6.1.0",
    "redis>=6.2.0",
    "dependency-injector>=4.48.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
    "pyright>=1.1.402",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-env>=1.1.5",
    "faker>=37.4.0",
    "pytest-mock>=3.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 90
indent-width = 4
target-version = "py312"
src = ["app"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "T"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
typeCheckingMode = "basic"
include = ["app"]
exclude = ["**/tests"]

reportUnknownArgumentType = "none"
reportMissingImports = "error"
reportMissingTypeStubs = "error"
reportOptionalMemberAccess = "none"
reportOptionalSubscript = "none"
reportAttributeAccessIssue = "none"
reportArgumentType = "none"
reportIncompatibleMethodOverride = "warning"

pythonVersion = "3.12"
pythonPlatform = "Linux"

[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = ["app"]
testpaths = ["tests"]
console_output_style = "progress"
asyncio_mode = "auto"
addopts = "-ra"
asyncio_default_fixture_loop_scope = "session"
log_cli = false
env = [
    "BOT_TOKEN=1234567890:FAKE_TOKEN_1234567890",
    "API_KEY=api_key",
    "BOT_ENV=test",
    "ADMIN_ID=666",
    "REDIS_HOST=127.0.0.1",
    "REDIS_PORT=6379",
    "REDIS_DB=0",
    "REDIS_PASSWORD=pass"
]
